# baliksena

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: basic.glsl  billboard.glsl  create_d11.bat  create_gl33.bat  create_gl33.sh  cutout.glsl  debug.glsl  env.glsl  skybox.glsl  universal.glsl
shaders/include/: shader_basic.h  shader_billboard.h  shader_cutout.h  shader_debug.h  shader_env.h  shader_skybox.h  shader_universal.h
src/: animator.cpp  animator.hpp  app.cpp  app.hpp  audio.cpp  audio.hpp  billboard.cpp  billboard.hpp  bmp_loader.cpp  bmp_loader.hpp  bounding_volumes.cpp  bounding_volumes.hpp  camera.cpp  camera.h  camera.hpp  cutscene.cpp  cutscene.hpp  dummy.hpp  frame.cpp  frame.hpp  frustum_culling.cpp  frustum_culling.h  gui.cpp  gui.hpp  imgui_ansi.hpp  input.cpp  input.hpp  light.cpp  light.hpp  lit_object.cpp  lit_object.hpp  logger.cpp  logger.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  (+18 more)
src/components/: camera.hpp  input.hpp
src/mafia/: base_parser.hpp  key_extractor.cpp  key_extractor.hpp  math.hpp  parser_4ds.cpp  parser_4ds.hpp  parser_5ds.cpp  parser_5ds.hpp  parser_cachebin.cpp  parser_cachebin.hpp  parser_dta.cpp  parser_dta.hpp  parser_scene2bin.cpp  parser_scene2bin.hpp  rep.hpp  utils.cpp  utils.hpp
src/systems/: camera.cpp  camera.h
vendors/: CMakeLists.txt
vendors/ImTerm/include/imterm/: terminal.hpp  terminal.tpp  utils.hpp
vendors/flecs/: CMakeLists.txt
vendors/glm/gtx/: string_cast.inl
vendors/sokol/: sokol_app.h  sokol_gfx.h
vendors/sokol/util/: sokol_imgui.h
